# Flask-GraphQL-Graphene-MySQL-Docker-StarterKit

./: .env.example  CLAUDE.md  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  extensions.py  schema.py
app/graphql/: schema.py  types.py
app/models/: User.py  VerificationCode.py  __init__.py  user.py  verification_code.py
app/modules/users/mutations/: LoginUser.py  RegisterUser.py  __init__.py
app/modules/users/queries/: Me.py  __init__.py
tests/: conftest.py  test_auth.py
